--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <![endif]-->
         
         <!--jQuery + jQuery UI CDN-->
-        <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
         <!--Bootstrap CDN-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <!--Backbone-->
