--- a/index.html
+++ b/index.html
@@ -509,34 +509,24 @@
                 </div>
 </script>
         <script type="text/template" id="gallery">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
+            <div class="gallery">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                    </ol>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img src="http://icdn.lenta.ru/images/2015/08/26/19/20150826192749822/preview_4b9492f6f5a2c9204570abb86205950d.jpg" alt="1">
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
                     </div>
-                    <div class="item">
-                        <img src="http://icdn.lenta.ru/images/2015/08/26/19/20150826192752328/preview_8b09ef8e98c876cf2771c943a0ee9bae.jpg" alt="2">
-                    </div>
-                    <div class="item">
-                        <img src="http://icdn.lenta.ru/images/2015/08/26/19/20150826192755285/preview_3535e4abaac4b0322349c9fa6046d3ec.jpg" alt="3">
-                    </div>
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
                 </div>
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>    
+            </div>
         </script>
         <script type="text/template" id="contacts">
             <div class="row">
