add carousel view

--- a/index.html
+++ b/index.html
@@ -508,22 +508,23 @@
                 </div>
 </script>
         <script type="text/template" id="gallery">
-            <div class="gallery">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                    </ol>
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-                    </div>
-                    <!-- Controls -->
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
+            <div id="photo"></div>
+        </script>
+        <script type="text/template" id="carousel">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
                 </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
             </div>
         </script>
         <script type="text/template" id="contacts">
